--- a/MirrorCompanion/MirrorCompanion/MainPage.xaml
+++ b/MirrorCompanion/MirrorCompanion/MainPage.xaml
@@ -5,29 +5,25 @@
     xmlns:local="using:MirrorCompanion"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" Loaded="Page_Loaded">
+    mc:Ignorable="d">
     <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False" 
-               CompactPaneLength="50" OpenPaneLength="150" Background="Black" >
+               CompactPaneLength="50" OpenPaneLength="150" Background="Black"  >
         <SplitView.Pane>
-            <StackPanel>
+            <RelativePanel>
                 <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
-            </StackPanel>
+                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click" RelativePanel.AlignLeftWithPanel="True"/>
+                <Button Name="HomeButton" Content="&#xE80F;" FontFamily="Segoe MDL2 Assets" Width="50" Height="50" Background="Transparent" Click="HomeButton_Click" RelativePanel.Below="HamburgerButton" />
+                <TextBlock RelativePanel.RightOf="HomeButton" VerticalAlignment="Center" RelativePanel.AlignVerticalCenterWith="HomeButton">Home</TextBlock>
+                <Button Name="NotesButton" Content="&#xE8BD;" FontFamily="Segoe MDL2 Assets" Width="50" Height="50" Background="Transparent" Click="NotesButton_Click" RelativePanel.Below="HomeButton" />
+                <TextBlock RelativePanel.RightOf="NotesButton" VerticalAlignment="Center" RelativePanel.AlignVerticalCenterWith="NotesButton">Notes</TextBlock>
+                <Button Name="SettingsButton" Content="&#xE713;" FontFamily="Segoe MDL2 Assets" Width="50" Height="50" Background="Transparent" Click="SettingsButton_Click" RelativePanel.AlignBottomWithPanel="True"/>
+                <TextBlock RelativePanel.RightOf="SettingsButton" VerticalAlignment="Center" RelativePanel.AlignVerticalCenterWith="SettingsButton">Settings</TextBlock>
+            </RelativePanel>
         </SplitView.Pane>
         <SplitView.Content>
-            <StackPanel Background="White">
-                <TextBlock FontSize="20" FontWeight="Bold" Foreground="Purple" Margin="0,0,0,10">Magic Mirror Companion App</TextBlock>
-                <TextBlock FontWeight="Bold">Note of the day is currently:</TextBlock>
-                <TextBlock Name="CurrentNoteTextBlock" TextWrapping="WrapWholeWords" Margin="0,0,0,10"></TextBlock>
-
-                <TextBlock>Set new note text here:</TextBlock>
-                <TextBox Name="NewNoteTextBox" ></TextBox>
-                <Button Name="NewNoteButton" Click="NewNoteButton_Click" HorizontalAlignment="Stretch" VerticalContentAlignment="Bottom" BorderThickness="0,0,0,1" Margin="0,10,0,0" BorderBrush="Black" HorizontalContentAlignment="Left" Background="Purple" Height="75" Foreground="White">Add New Note</Button>
-                <Button Name="ClearAllNotesButton" HorizontalAlignment="Stretch" Margin="0,0,0,0" Background="Purple" Height="75" Foreground="White" BorderThickness="0,0,0,1" BorderBrush="Black" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Left" Click="ClearAllNotesButton_Click">Delete All Notes</Button>
-                <Button Name="Future1Button" HorizontalAlignment="Stretch" Margin="0,0,0,0" Background="Purple" Height="75" Foreground="White" BorderThickness="0,0,0,1" BorderBrush="Black" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Left" Click="ClearAllNotesButton_Click">Future Function</Button>
-                <Button Name="Future2Button" HorizontalAlignment="Stretch" Margin="0,0,0,0" Background="Purple" Height="75" Foreground="White" BorderThickness="0,0,0,1" BorderBrush="Black" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Left" Click="ClearAllNotesButton_Click">Future Function</Button>
-                <Button Name="Future3Button" HorizontalAlignment="Stretch" Margin="0,0,0,0" Background="Purple" Height="75" Foreground="White" BorderThickness="0,0,0,1" BorderBrush="Black" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Left" Click="ClearAllNotesButton_Click">Future Function</Button>
-            </StackPanel>
+            <StackPanel Background="white">
+                <TextBlock >Welcome page.</TextBlock>
+            </StackPanel>   
         </SplitView.Content>
     </SplitView>
     
